@@ -4,6 +4,9 @@ Note: All updates require the explorer to be restarted
 * remove tmp/db_index.pid (if it exists)
 * Add new settings to settings.json (see settings.json.template)
   * lock_during_index
+  * use_rpc
+  * txcount_per_page
+  * index.txs_per_page
 * Reindex explorerdb (node --stack-size=15000 scripts/sync.js index reindex) to build new address TX collection
 
 1.6.0 -> 1.6.1
