@@ -231,6 +231,7 @@ app.set('googleplus', settings.googleplus);
 app.set('youtube', settings.youtube);
 app.set('genesis_block', settings.genesis_block);
 app.set('index', settings.index);
+app.set('use_rpc', settings.use_rpc);
 app.set('heavy', settings.heavy);
 app.set('lock_during_index', settings.lock_during_index);
 app.set('txcount', settings.txcount);
