@@ -4,6 +4,8 @@ var request = require('request')
 
 var base_url = 'http://127.0.0.1:' + settings.port + '/api/';
 
+const Client = require('bitcoin-core');
+const client = new Client(settings.wallet);
 
 // returns coinbase total sent as current coin supply
 function coinbase_supply(cb) {
@@ -95,17 +97,41 @@ module.exports = {
   },
 
   get_blockhash: function(height, cb) {
-    var uri = base_url + 'getblockhash?height=' + height;
-    request({uri: uri, json: true}, function (error, response, body) {
-      return cb(body);
-    });
+    if (settings.use_rpc) {
+      var uri = base_url + 'getblockhash?height=' + height;
+      request({uri: uri, json: true}, function (error, response, body) {
+        return cb(body);
+      });
+    } else {
+      client.command([{method:'getblockhash', parameters: [height]}], function(err, response){
+        if(err){console.log('Error: ', err); onlyConsole.trace(err)}
+        else{
+          if(response[0].name == 'RpcError'){
+            return cb('There was an error. Check your console.');
+          }
+          return cb(response[0]);
+        }
+      });
+    }
   },
 
   get_block: function(hash, cb) {
-    var uri = base_url + 'getblock?hash=' + hash;
-    request({uri: uri, json: true}, function (error, response, body) {
-      return cb(body);
-    });
+    if (settings.use_rpc) {
+      var uri = base_url + 'getblock?hash=' + hash;
+      request({uri: uri, json: true}, function (error, response, body) {
+        return cb(body);
+      });
+    } else {
+      client.command([{method:'getblock', parameters: [hash]}], function(err, response){
+        if(err){console.log('Error: ', err); onlyConsole.trace(err)}
+        else{
+          if(response[0].name == 'RpcError'){
+            return cb('There was an error. Check your console.');
+          }
+          return cb(response[0]);
+        }
+      });
+    }
   },
 
   get_rawtransaction: function(hash, cb) {
