@@ -45,6 +45,7 @@
   "check_timeout": 250,
 
   // wallet settings
+  "use_rpc": false,
   "wallet": {
     "host": "localhost",
     "port": 55681,
